--- a/styles/global.css
+++ b/styles/global.css
@@ -12,3 +12,13 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+:root {
+    --bg-color: #09090b;
+    --surface-color: #18181b;
+    --stroke-color: #27272a;
+    --text-color-secondary: #a1a1aa;
+    --text-color-primary: #f4f4f5;
+    --brand-color-primary: #f7b733;
+    --brand-color-secondary: #fc4a1a;
+}
