--- a/styles/global.css
+++ b/styles/global.css
@@ -66,3 +66,21 @@ h2 {
 h3 {
     font-size: var(--fs-lg);
 }
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul[role="list"] {
+    list-style: none;
+}
+
+/* 80*16px = 1280px */
+@media(width >= 80em) {
+    :root {
+        --fs-lg: 2rem;
+        --fs-xl: 3rem;
+        --fs-2xl: 4rem;
+    }
+}
