--- a/styles/global.css
+++ b/styles/global.css
@@ -33,6 +33,10 @@
     --fs-xl: 1.5rem;
     --fs-2xl: 2.5rem;
 
+    --py-base: 1rem;
+    --py-lg: 1.5rem;
+    --py-xl: 3rem;
+
     --px-lg: 1.5rem;
 }
 
@@ -79,11 +83,15 @@ ul[role="list"] {
 }
 
 /* 80*16px = 1280px */
-@media(width >= 80em) {
+@media (width >= 80em) {
     :root {
         --fs-lg: 2rem;
         --fs-xl: 3rem;
         --fs-2xl: 4rem;
+
+        --py-base: 1.5rem;
+        --py-lg: 2.5rem;
+        --py-xl: 5rem;
 
         --px-lg: 2rem;
     }
