--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -11,7 +11,7 @@
 
     border-radius: 0.5rem;
 
-    font: var(--fw-md) var(--fs-base)/ 1.5rem var(--ff-sans);
+    font: var(--fw-md) var(--fs-base) / 1.5rem var(--ff-sans);
 
     cursor: pointer;
 
@@ -21,11 +21,14 @@
 
 .btn:hover {
     --btn-bg-color: linear-gradient(
-        90deg, 
+        90deg,
         var(--brand-color-secondary) 0%,
         var(--brand-color-primary) 100%
     );
     --btn-color: var(--surface-color);
+    -webkit-background-clip: initial;
+    background-clip: initial;
+    color: var(--btn-color);
 }
 
 .btn-sm {
@@ -44,7 +47,6 @@
 }
 
 .btn[aria-label] {
-    
     position: relative;
 
     &::before {
@@ -62,5 +64,17 @@
         background-clip: text;
         color: transparent;
         z-index: 1;
+    }
+}
+
+@media (width >= 80em) {
+    .btn-sm {
+        padding: 0.75rem;
+        font-size: var(--fs-base);
+    }
+
+    .btn-md {
+        padding: 1rem 2rem;
+        font-size: 1.125rem;
     }
 }
