--- a/styles/utility.css
+++ b/styles/utility.css
@@ -18,7 +18,7 @@
     --max-width: 375px;
     width: min(var(--max-width), 100% - var(--px-lg) * 2);
     margin-inline: auto;
-    border: solid red 1px;
+    /* border: solid red 1px; */
 }
 
 .desktop-only {
@@ -34,8 +34,16 @@
     display: flex;
 }
 
+.items-center {
+    align-items: center;
+}
+
 .gap-1 {
     gap: 1rem;
+}
+
+.gap-1\.5 {
+    gap: 1.5rem;
 }
 
 .grid {
@@ -47,7 +55,7 @@
         --max-width: 80rem;
     }
 
-    .display-only {
+    .desktop-only {
         display: initial;
     }
 
